src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;
 
/* width */
::-webkit-scrollbar {
    width: 16px;
}
 
/* Track */
::-webkit-scrollbar-track {
    background: #0a0a0a;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    background: #1f1f1f;
    border: #0a0a0a solid 4px;
    border-radius: 8px;
}
 
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #2f2f2f;
}

